# accesskit

./: .gitignore  .release-please-manifest.json  Cargo.toml  pyproject.toml
.github/workflows/: bindings.yml  c-bindings.yml  ci.yml  generate-headers.yml  maturin.yml  python-bindings.yml  release-please.yml
bindings/c/: CHANGELOG.md  Cargo.toml  Makefile  build.rs  cbindgen.toml
bindings/c/examples/sdl/: README.md
bindings/c/examples/windows/: build.bat  hello_world.c
bindings/c/src/: accesskit.h  common.rs  lib.rs  macos.rs  unix.rs  windows.rs
bindings/python/: CHANGELOG.md  Cargo.toml  README.md
bindings/python/examples/pygame/: hello_world.py
bindings/python/src/: common.rs  lib.rs  macos.rs  unix.rs  windows.rs
common/: CHANGELOG.md  Cargo.toml
consumer/: CHANGELOG.md  Cargo.toml
