[package]
name = "accesskit_python"
version = "0.1.0"
authors = ["Arnold Loubriat <datatriny@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python bindings to the AccessKit library"
repository = "https://github.com/AccessKit/accesskit"
readme = "README.md"
publish = false
edition = "2021"

[lib]
name = "accesskit"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
accesskit = { version = "0.11.1", path = "../../common", features = ["pyo3"] }
pyo3 = { version = "0.19", features = ["abi3-py37", "multiple-pymethods"] }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.14.1", path = "../../platforms/windows" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.8.0", path = "../../platforms/macos" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.5.1", path = "../../platforms/unix" }
